// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipePage renders component after load without crashing 1`] = `
"<div>
  <div className=\\"recipe\\">
    <div className=\\"top\\">
      <button className=\\"button-secondary\\" onClick={[Function: onClick]}>
        « Back
      </button>
      <div className=\\"delete-btn\\">
        <button className=\\"button-secondary\\" id=\\"delete-btn\\" onClick={[Function (anonymous)]}>
          Delete
        </button>
        <Modal isOpen={false} toggle={[Function (anonymous)]} autoFocus={true} centered={false} scrollable={false} role=\\"dialog\\" backdrop={true} keyboard={true} zIndex={1050} fade={true} onOpened={[Function: noop]} onClosed={[Function: noop]} modalTransition={{...}} backdropTransition={{...}} unmountOnClose={true} returnFocusAfterClose={true} container=\\"body\\">
          <ModalHeader toggle={[Function (anonymous)]} tag=\\"h5\\" wrapTag=\\"div\\" closeAriaLabel=\\"Close\\" charCode={215}>
            Delete &quot;
            meatballs
            &quot;?
          </ModalHeader>
          <ModalBody tag=\\"div\\">
            Are you sure that you want to delete this recipe?
          </ModalBody>
          <ModalFooter tag=\\"div\\">
            <button className=\\"button-secondary\\" onClick={[Function: onClick]}>
              Delete
            </button>
             
            <button className=\\"button-primary\\" id=\\"cancel-btn\\" onClick={[Function (anonymous)]}>
              Cancel
            </button>
          </ModalFooter>
        </Modal>
      </div>
    </div>
    <div className=\\"recipe-title\\">
      <h1>
        meatballs
      </h1>
    </div>
    <div className=\\"recipe-cooktime\\">
      Total Cook Time: 
      30 mins
    </div>
    <div className=\\"recipe-description\\">
      just basic meatballs
    </div>
    <hr />
    <div className=\\"recipe-image\\">
      <img src={[undefined]} alt=\\"meatballs\\" />
    </div>
    <div className=\\"recipe-ingredients\\">
      <h3>
        Ingredients
      </h3>
      <ul>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            ground beef
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            eggs
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            bread crumbs
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            garlic
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            onion
          </label>
        </li>
      </ul>
    </div>
    <hr />
    <div className=\\"recipe-directions\\">
      <h3>
        Directions
      </h3>
      <ol>
        <li className=\\"directions-item\\">
          <label className=\\"direction-container\\">
            step 1
             
          </label>
        </li>
        <li className=\\"directions-item\\">
          <label className=\\"direction-container\\">
            step 2
             
          </label>
        </li>
        <li className=\\"directions-item\\">
          <label className=\\"direction-container\\">
            step 3
             
          </label>
        </li>
      </ol>
    </div>
  </div>
</div>"
`;

exports[`RecipePage renders component with delete recipe modal open 1`] = `
"<div>
  <div className=\\"recipe\\">
    <div className=\\"top\\">
      <button className=\\"button-secondary\\" onClick={[Function: onClick]}>
        « Back
      </button>
      <div className=\\"delete-btn\\">
        <button className=\\"button-secondary\\" id=\\"delete-btn\\" onClick={[Function (anonymous)]}>
          Delete
        </button>
        <Modal isOpen={true} toggle={[Function (anonymous)]} autoFocus={true} centered={false} scrollable={false} role=\\"dialog\\" backdrop={true} keyboard={true} zIndex={1050} fade={true} onOpened={[Function: noop]} onClosed={[Function: noop]} modalTransition={{...}} backdropTransition={{...}} unmountOnClose={true} returnFocusAfterClose={true} container=\\"body\\">
          <ModalHeader toggle={[Function (anonymous)]} tag=\\"h5\\" wrapTag=\\"div\\" closeAriaLabel=\\"Close\\" charCode={215}>
            Delete &quot;
            meatballs
            &quot;?
          </ModalHeader>
          <ModalBody tag=\\"div\\">
            Are you sure that you want to delete this recipe?
          </ModalBody>
          <ModalFooter tag=\\"div\\">
            <button className=\\"button-secondary\\" onClick={[Function: onClick]}>
              Delete
            </button>
             
            <button className=\\"button-primary\\" id=\\"cancel-btn\\" onClick={[Function (anonymous)]}>
              Cancel
            </button>
          </ModalFooter>
        </Modal>
      </div>
    </div>
    <div className=\\"recipe-title\\">
      <h1>
        meatballs
      </h1>
    </div>
    <div className=\\"recipe-cooktime\\">
      Total Cook Time: 
      30 mins
    </div>
    <div className=\\"recipe-description\\">
      just basic meatballs
    </div>
    <hr />
    <div className=\\"recipe-image\\">
      <img src={[undefined]} alt=\\"meatballs\\" />
    </div>
    <div className=\\"recipe-ingredients\\">
      <h3>
        Ingredients
      </h3>
      <ul>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            ground beef
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            eggs
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            bread crumbs
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            garlic
          </label>
        </li>
        <li className=\\"ingredient-item\\">
          <label className=\\"container\\">
            <input type=\\"checkbox\\" />
            onion
          </label>
        </li>
      </ul>
    </div>
    <hr />
    <div className=\\"recipe-directions\\">
      <h3>
        Directions
      </h3>
      <ol>
        <li className=\\"directions-item\\">
          <label className=\\"direction-container\\">
            step 1
             
          </label>
        </li>
        <li className=\\"directions-item\\">
          <label className=\\"direction-container\\">
            step 2
             
          </label>
        </li>
        <li className=\\"directions-item\\">
          <label className=\\"direction-container\\">
            step 3
             
          </label>
        </li>
      </ol>
    </div>
  </div>
</div>"
`;

exports[`RecipePage renders loading state without crashing 1`] = `
"<div>
  <Spinner className=\\"spinner\\" color=\\"danger\\" tag=\\"div\\" type=\\"border\\">
    Loading...
  </Spinner>
</div>"
`;
